reduce whatnowmsg font size to prevent wrapping in ubuntu

--- a/dashboard/compass/sass/style.sass
+++ b/dashboard/compass/sass/style.sass
@@ -811,7 +811,7 @@ p .buttonlink
     background: darken($font-color-success, 10%)
 
 #whatnowtxt
-  font-size: $font-size-small
+  font-size: $font-size-smaller
   margin-bottom: 0
 
 
